# nldso_photometricLoss

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ToDolist.txt  codeNote.txt
QtVisualizer/: CMakeLists.txt
QtVisualizer/src/: QtVisualizer.cpp
config/: kitti_stereo.cfg  tum_rgbd.cfg
data/: error_record.txt
data/Env_light/left/: image_leftBaseColor08.pfm  image_leftLinearDepth07.pfm  image_leftLinearDepth08.pfm  image_leftNonLinearDepth07.pfm  image_leftNormal08.pfm  left_pose.txt  left_pose08.txt
data/Env_light/ref/: image_refLinearDepth06.exr  image_refLinearDepth06.pfm  image_refNonLinearDepth06.exr  image_refNonLinearDepth06.pfm  image_tarNonLinearDepth06_rotated.exr
data/Env_light/right/: image_rightBaseColor08.pfm  image_rightLinearDepth07.pfm  image_rightLinearDepth08.pfm  image_rightNormal08.pfm  (+1 more)
data/Exp_specular_floor/: point_of_I2.txt  point_of_Interest.txt
data/SimulationEnvData/: scene0704_01_control_cam_pose.txt  scene0704_01_control_cam_pose_old.txt
data/dataSetPBA_init_poor/: 00.txt  00_part.txt  01.txt  01_150.txt  CameraTrajectorySeq12_badIntri_1000Features_relative.txt  CameraTrajectory_15.txt  CameraTrajectory_badIntri2.txt  CameraTrajectory_badIntrin02.txt  CameraTrajectory_es_01.txt  CameraTrajectory_fr1_bad_intrin.txt  CameraTrajectory_fr3_bad02.txt  CameraTrajectory_fr3_bad02_2_orbScale.txt  CameraTrajectory_fr3_badIntrin.txt  CameraTrajectory_fr3_long.txt  CameraTrajectory_fx560.txt  GT_Trajectory_seq15_650frames_WorldAtFirstFrame_relative.txt  GT_pose_list_fr3.txt  GT_pose_list_fr3_nearFar.txt  GT_pose_list_fr3_whole_backup.txt  ORB_CameraTrajectorySeq16GT_relative.txt  Relative_01_pose.txt  Relative_CameraTrajectory_es_01_pose.txt  Relative_GT_pose_list_fr3.txt  Relative_GT_pose_list_fr3_nearFar.txt  USeoutput_relative_poses_tum_rgbd_fr3_orbScale.txt  associated_GTPose.txt  error_record.txt  groundtruth_fr3.txt  gt_fr3_asso.txt  output_relative_poses_tum_rgbd_fr3_long.txt  output_relative_poses_tum_rgbd_fr3_orbScale.txt  output_relative_poses_tum_rgbd_fr3_orbScale_converted.txt  output_relative_poses_tum_rgbd_obtainedbyAbs2Rel.txt  output_relative_poses_tum_rgbd_relative.txt  refined_poses_es_tum_abs_pose1_newRound_relative.txt  refined_poses_es_tum_abs_pose_pure_pba_1_relative.txt  refined_poses_es_tum_half_wrong.txt  result_rgbd_dso_segmented_reseted_relative.txt  scene0370_02_seq_01_tumRGBD_segmented_reseted.txt  seq01_Poses_gt.txt  (+6 more)
data/kitti_init_poor/: 00_partial.txt  11.txt  CameraTrajectory_00_default_Init_by_ORB_SLAM.txt  record_something  refined_poses_relative2absoluteCheckPose_00.txt
dataAnalysis/seq01/: refined_poses_es.txt  relativePoses_gt.txt
dataAnalysis/seq_15/: lastPurerefined_poses_es_tum_abs_pose_pure_pba_seq15_new0.txt  refined_poses_es_tum_abs_pose_pure_pba_seq15_new0.txt  refined_poses_es_tum_abs_pose_pure_pba_seq15_new0_good.txt  refined_poses_es_tum_abs_pose_pure_pba_seq15_new0_newer.txt
dataAnalysis/seq_18/: refined_poses_es_tum_abs_pose_pure_pba_seq180.txt
dataAnalysis/seq_19/: CameraTrajectory_seq19_ORBSLAM_relative.txt  refined_poses_es_tum_abs_pose_pure_pba_seq190.txt
dataAnalysis/seq_19_new/: T_distribution_seq19_new0.txt  T_distribution_seq19_new_c0.txt  refined_poses_pure_pba_t_distribution_seq19_new0.txt
dataAnalysis/seq_20/: GT_Trajectory_seq20_650_WorldFirst.txt  refined_poses_es_tum_abs_pose_pure_pba_seq19_new0.txt  refined_poses_es_tum_abs_pose_pure_pba_seq20_new0.txt  t_distribution_plus_pure_pba_seq20_new0.txt
dataAnalysis/trajectory_00_vis/: KITTI_refined_poses.txt  LivingRoom_poses.txt  evaluate_ate.py  initPoses_absolute.txt  initPoses_relative_00.txt  refined_poses_es.txt  refined_poses_test_00.txt  refined_poses_test_00_absOpt.txt  relativePoses_gt.txt
include/: GLI.h  PCLOpt.h  brdfMicrofacet.h  dataLoader.h  deltaCompute.h  gui_helper.h  minimalImage.h  numType.h  photometricBA.h  pixelSelector.cpp  pixelSelector.h  preComputeSetting.cpp  preComputeSetting.h  preFilter.h  reprojection.h  setting.cpp  wrapperHeader.h
include/PhotometricBA/: CMakeLists.txt  calibration.h  dataset.cpp  dataset.h  deltaCompution.cpp  deltaCompution.h  eigen.h  envLightPreProcessing.cpp  envLightPreProcessing.h  file_loader.cpp  file_loader.h  imgproc.cpp  imgproc.h  pangolinVis.cpp  pangolinVis.h  pba.cpp  pba.h  pose_utils.cpp  pose_utils.h  stereo_algorithm.cpp  trajectory.cpp  trajectory.h  types.cpp  types.h  utils.cpp  utils.h
include/SpecularHighlightRemoval/: SpecularHighlightRemoval.h
include/Statistics/: BetaFunction.h  IDistribution.cpp  IDistribution.h  RobustNormalDistribution.h  TDistribution.cpp  TDistribution.h
include/Utils/: LossFunction.h  Settings.cpp  UtilFunctions.h  sse.h
include/Visualizer/: IVisualizer.h
include/brdfIntegrationMap/: brdfIntegrationMap.pfm
include/cameraProjection/: pba_cost_functor.h  photometricBA.h  reprojection.h
include/controlPointSelector/: ctrlPointSelector.cpp  ctrlPointSelector.h
include/dataLoader/: PFMReadWrite.cpp  PFMReadWrite.h  dataLoader.h
include/deltaCompute/: deltaCompute.cpp  deltaCompute.h
include/diffuseMap/: Renderer_diffuse.cpp  Renderer_diffuse.h  diffuse_mask_Renderer.cpp  diffuse_mask_Renderer.h  image_DiffuseMask.pfm
include/envLightPreProcessing/: envLightPreProcessing.cpp  envLightPreProcessing.h
include/preFilter/: FileTools.cpp  Mesh.cpp  Renderer.cpp  Renderer.h  ShaderNode.cpp  preComputeSetting.h  preFilter.cpp  preFilter.h  preFilterUtils.h  specular_mask_Renderer.cpp  specular_mask_Renderer.h
include/preFilter_data/: parameters_envmapMask.csv
include/settings/: common.h  preComputeSetting.cpp  preComputeSetting.h  setting.h
include/shaders/: diffuse_fragment_shader.txt  fragment_shader.txt  fragment_shader_modified.txt  specular_mask_fragment_shader.txt
include/utils/: ultils.h
include/visnav/: local_parameterization_se3.hpp
ref_shaderCode/final_Diffuseshader_code/shader_code/cpp/: CMakeLists.txt  Matrix.h  README.txt
src/: photoBA.cpp  photometricLoss.cpp  photometricLossPointCloud.cpp  test_functions.cpp
src/SpecularHighlightRemoval/: SpecularHighlightRemoval.cpp
(+239 files in other folders)
